# StochasticStandSim

./: .gitignore  AGENTS.md  PLANNING.md  README.md  README_DISTURBANCES.md  REWARD_TUNING.md  __init__.py  main.py  mdp.py  notes.md  pmrc.py  prices.md  pyproject.toml  simt.py  yield_table.csv
app/: streamlit_demo.py
config/: costs.csv  disturbances.yaml  prices.csv
core/: actions.py  baselines.py  config.py  disturbances.py  economics.py  env.py  evaluation.py  growth.py  logging_utils.py  mdp.py  mdp_solver.py  metrics.py  pmrc_model.py  process_noise.py  products.py  rng.py  rollout.py  scenarios.py  simulate.py  stand_env.py  stand_table_system.py  state.py  stochastic_model.py  stochastic_pmrc_model.py  stochastic_stand.py  types.py  utils.py  validators.py  viz.py
data/: BaselineData_plotSumAC.xls  BaselineData_plotSumAC_Damage.xls  PMRC.xls  econ_params.yaml  example_stands.csv
disturbances/: __init__.py  adsr.py  regimes.py
economics/: __init__.py  finance.py  pricing.py  salvage.py
envs/: StandEnv.py  __init__.py
examples/: catastrophe_comparison.py  deterministic_vs_stochastic.py  disturbance_demo.py  disturbance_frequency.py  growth_scenarios.py  growth_validation.py  hd_debug_demo.py  mdp_buongiorno_analysis.py  mdp_paper_figures.py  mdp_rotation_analysis.py  mdp_transition_matrix.py  policy_comparison.py  policy_evaluation.py  product_distribution.py  product_distribution_stochastic.py  stochastic_growth_demo.py  thin_response.py  transition_heatmap.py
growth/: __init__.py  models.py
paper/: NOTES.txt  references.bib  thesis.aux  thesis.bbl  thesis.bbl-SAVE-ERROR  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc  ugasample.tex
plots/: __init__.py  plots.py  scenarios.py
policies/: baselines.py
rl/: policies.py  sb3_wrappers.py  train.py  train_all_algos.py
scripts/: evaluate_stand_value.py  run_baselines.py  run_full_matrix_experiment.py  run_nothin_experiment.py  solve_mdp_finite_horizon.py
stochastic_stand_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stochasticstandsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_app/: app.py
test_csvs/: desc.md  scenario_1_nothin.csv  scenario_1_thin.csv  scenario_2_nothin.csv  (+2 more)
(+138 files in other folders)
